--- a/dobulbek.html
+++ b/dobulbek.html
@@ -97,7 +97,7 @@
 
     <div class="you">
 
-<img src="./image 4 (1).png" alt="">
+<img src="./image 17.png" alt="">
 
 <div class="done">
 <div class="don">25см <br>
@@ -138,7 +138,7 @@
 
     <div class="you">
 
-<img src="./image 4 (1).png" alt="">
+<img src="./image 14.png" alt="">
 
 <div class="done">
 <div class="don">25см <br>
@@ -173,83 +173,7 @@
 
     <div class="you">
 
-<img src="./image 4 (1).png" alt="">
-
-<div class="done">
-<div class="don">25см <br>
-295сом</div>
-<div class="don">25см <br>
-295сом</div>
-<div class="don">25см <br>
-295сом</div>
-
-</div>
-
-    </div>
-
-
-    <div class="yoo">
-
-        <p class="rule">Пепперони <br>
-             фирменный томатный соус, <br>
-             сыр моцарелла, куринная <br>
-              грудка, брынза.</p>
-
-
-<button> В корзину</button>
-
-
-
-    </div>
-
-</div>
-
-</div>
-
-
-
-<div class="bosses">
-
-<div class="box">
-
-    <div class="you">
-
-<img src="./image 4 (1).png" alt="">
-
-<div class="done">
-<div class="don">25см <br>
-295сом</div>
-<div class="don">25см <br>
-295сом</div>
-<div class="don">25см <br>
-295сом</div>
-
-</div>
-
-    </div>
-
-
-    <div class="yoo">
-
-        <p class="rule">Пепперони <br>
-             фирменный томатный соус, <br>
-             сыр моцарелла, куринная <br>
-              грудка, брынза.</p>
-
-
-<button> В корзину</button>
-
-
-
-    </div>
-
-</div>
-
-<div class="box">
-
-    <div class="you">
-
-<img src="./image 4 (1).png" alt="">
+<img src="./image 18.png" alt="">
 
 <div class="done">
 <div class="don">25см <br>
@@ -290,7 +214,7 @@
 
     <div class="you">
 
-<img src="./image 4 (1).png" alt="">
+<img src="./image 17.png" alt="">
 
 <div class="done">
 <div class="don">25см <br>
@@ -325,7 +249,83 @@
 
     <div class="you">
 
-<img src="./image 4 (1).png" alt="">
+<img src="./image 19.png" alt="">
+
+<div class="done">
+<div class="don">25см <br>
+295сом</div>
+<div class="don">25см <br>
+295сом</div>
+<div class="don">25см <br>
+295сом</div>
+
+</div>
+
+    </div>
+
+
+    <div class="yoo">
+
+        <p class="rule">Пепперони <br>
+             фирменный томатный соус, <br>
+             сыр моцарелла, куринная <br>
+              грудка, брынза.</p>
+
+
+<button> В корзину</button>
+
+
+
+    </div>
+
+</div>
+
+</div>
+
+
+
+<div class="bosses">
+
+<div class="box">
+
+    <div class="you">
+
+<img src="./image 12 (1).png" alt="">
+
+<div class="done">
+<div class="don">25см <br>
+295сом</div>
+<div class="don">25см <br>
+295сом</div>
+<div class="don">25см <br>
+295сом</div>
+
+</div>
+
+    </div>
+
+
+    <div class="yoo">
+
+        <p class="rule">Пепперони <br>
+             фирменный томатный соус, <br>
+             сыр моцарелла, куринная <br>
+              грудка, брынза.</p>
+
+
+<button> В корзину</button>
+
+
+
+    </div>
+
+</div>
+
+<div class="box">
+
+    <div class="you">
+
+<img src="./image 21.png" alt="">
 
 <div class="done">
 <div class="don">25см <br>
@@ -368,7 +368,7 @@
 
     <div class="you">
 
-<img src="./image 4 (1).png" alt="">
+<img src="./image 15.png" alt="">
 
 <div class="done">
 <div class="don">25см <br>
@@ -403,7 +403,7 @@
 
     <div class="you">
 
-<img src="./image 4 (1).png" alt="">
+<img src="./image 21.png" alt="">
 
 <div class="done">
 <div class="don">25см <br>
@@ -442,7 +442,7 @@
 
     <div class="you">
 
-<img src="./image 4 (1).png" alt="">
+<img src="./image 16.png" alt="">
 
 <div class="done">
 <div class="don">25см <br>
@@ -477,7 +477,7 @@
 
     <div class="you">
 
-<img src="./image 4 (1).png" alt="">
+<img src="./image 13.png" alt="">
 
 <div class="done">
 <div class="don">25см <br>
